--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                                                     <a class="nav-link" href="@Url.Action("SoftDesignAndDev", "Home")#webSec">Website</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="@Url.Action("SoftDesignAndDev", "Home")#EcomSec">Ecommerce</a>
+                                                    <a class="nav-link" href="@Url.Action("SoftDesignAndDev", "Home")#ecomSec">Ecommerce</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="@Url.Action("SoftDesignAndDev", "Home")#POSsec">Point of Sales</a>
