--- a/Views/Home/Rental.cshtml
+++ b/Views/Home/Rental.cshtml
@@ -148,6 +148,7 @@
                                                 </div>
                                                 <div data-accordion-component="AccordionItemPanel" class="accordion__panel" role="region" aria-labelledby="accordion__heading-a" id="accordion__panel-a">
                                                     <p>SMDC Shore 2 Pasay is situated along Sunrise Drive, Mall of Asia Complex, Pasay City. It is strategically located near Manila Bay, providing residents with stunning views of the bay and its famous sunset.</p>
+                                                     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1-dzVt_2Hd2QBxpXlqiEqe8gsUoY-nII&ehbc=2E312F" width="840" height="480"></iframe>
                                                 </div>
                                             </div>
                                             <div data-accordion-component="AccordionItem" class="accordion__item">
