--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -89,7 +89,7 @@
 
     <section class="team text-center py-5">
         <div class="container">
-            <div class="header my-5">              
+            <div class="header my-5">
                 <div class="section-title">
                     <h2>Meet our Team</h2>
                     <p class="text-muted">Meet and Greet our FCD Team Members</p>
@@ -195,5 +195,95 @@
         </div>
     </section>
     <!---END OF TEAM-->
-</div>
+    <!---partnership-->
+    <div class="container mb-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-lg-12 col-md-12 services-content">
+                <div class="section-title d-flex flex-column align-items-center">
+                    <h2 class="text-center py-3">Partnerships</h2>
+                    <div class="bar"></div>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
 
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <ellipse cx="12" cy="5" rx="9" ry="3"></ellipse>
+                                <path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path>
+                                <path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <line x1="2" y1="12" x2="22" y2="12"></line>
+                                <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
+                                <polyline points="13 2 13 9 20 9"></polyline>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+                                <polyline points="17 6 23 6 23 12"></polyline>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+                                <polyline points="17 6 23 6 23 12"></polyline>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+                                <polyline points="17 6 23 6 23 12"></polyline>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+                                <polyline points="17 6 23 6 23 12"></polyline>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="box">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+                                <polyline points="17 6 23 6 23 12"></polyline>
+                            </svg>
+                            Partner Name
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!----END-->
+
+</div>
