Updated Testimonials Page

--- a/Views/Home/Blogs.cshtml
+++ b/Views/Home/Blogs.cshtml
@@ -8,8 +8,8 @@
     <div class="d-table">
         <div class="d-table-cell">
             <div class="container">
-                <h1 class="font-weight-bold">The News from Our Blog</h1>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+                <h1 class="font-weight-bold">The Latest from Our Blogs</h1>
+                <h4>Stay Informed, Stay Inspired: Explore Captivating Insights</h4>
             </div>
         </div>
     </div>
