--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                                                     <a class="nav-link" href="@Url.Action("Marketing", "Home")#DMsec">Digital Marketing</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="@Url.Action("Marketing", "Home")#SMsec">Social Media Management</a>
+                                                    <a class="nav-link" href="@Url.Action("Marketing", "Home")#SMMsec">Social Media Management</a>
                                             </ul>
                                         </li>
                                         <li class="nav-item">
