--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -204,7 +204,7 @@
                             </a>
                         </div>
                         <div class="col-lg-12 col-md-6">
-                            <a  href="@Url.Action("Marketing", "Home")#SMsec" class="box text-center text-secondary">
+                            <a  href="@Url.Action("Marketing", "Home")#SMMsec" class="box text-center text-secondary">
                                 <div class="ml-min-1">
                                     Social Media Management
                                 </div>
