--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -473,9 +473,9 @@
 <div class="blog-area pb-50">
     <div class="container">
         <div class="section-title">
-            <h2>The News from Our Blog</h2>
+            <h2>The Latest from Our Blogs</h2>
             <div class="bar"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Stay Informed, Stay Inspired: Explore Captivating Insights</p>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6">
