--- a/Views/Home/Blogs.cshtml
+++ b/Views/Home/Blogs.cshtml
@@ -8,8 +8,11 @@
     <div class="d-table">
         <div class="d-table-cell">
             <div class="container">
-                <h1 class="font-weight-bold">The Latest from Our Blogs</h1>
-                <h4>Stay Informed, Stay Inspired: Explore Captivating Insights</h4>
+                <div class="section-title">
+                    <h1 class="font-weight-bold">The Latest from Our Blogs</h1>
+                    <h4>Stay Informed, Stay Inspired: Explore Captivating Insights</h4>
+                    <div class="bar"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -131,5 +134,18 @@
                 </div>
             </div>
         </div>
+        <div class="pagination-area">
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
     </div>
 </div>
