--- a/Views/Home/Rental.cshtml
+++ b/Views/Home/Rental.cshtml
@@ -1,4 +1,4 @@
-﻿@{ ViewBag.Title = "Real Estate"; }
+@{ ViewBag.Title = "Real Estate"; }
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <div class="page-title-area">
@@ -29,34 +29,34 @@
         </div>
         <div class="row align-items-center">
             <div class="col-lg-6">
-                <div id="products-details-carousel" class="carousel slide" data-bs-ride="carousel">
+                <div id="products-details-carousel" class="carousel slide" style="width: 100%;" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="../Assets/img/rental/image2.jpeg" alt="Image 1">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../Assets/img/rental/image4.jpeg" alt="Image 2">
+                            <img class="d-block w-100" style="width: 40rem; height: 30rem; object-fit: cover;" src="../Assets/img/rental/image4.jpeg" alt="Image 2">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-white">Grand Lobby</h5>
                                 <p class="text-white">Welcome guests and invite envy at the Grand Lobby: a lavishly-designed hall for families and friends to lounge in.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../Assets/img/rental/image7.jpeg" alt="Image 3">
+                            <img class="d-block w-100" style="width: 40rem; height: 30rem; object-fit: cover;" src="../Assets/img/rental/image7.jpeg" alt="Image 3">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-white">Amenities</h5>
                                 <p class="text-white">Shore 2 Residences offers a premier riverfront inspired lifestyle, with pools that stretch throughout the amenity deck of this development.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../Assets/img/rental/image6.jpeg" alt="Image 4">
+                            <img class="d-block w-100" style="width: 40rem; height: 30rem; object-fit: cover;" src="../Assets/img/rental/image6.jpeg" alt="Image 4">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-white">Grand Lobby</h5>
                                 <p class="text-white">Welcome guests and invite envy at the Grand Lobby: a lavishly-designed hall for families and friends to lounge in.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../Assets/img/rental/image8.png" alt="Image 5">
+                            <img class="d-block w-100" style="width: 40rem; height: 30rem; object-fit: cover;" src="../Assets/img/rental/image8.png" alt="Image 5">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-white">Amenities</h5>
                                 <p class="text-white">Shore 2 Residences offers a premier riverfront inspired lifestyle, with pools that stretch throughout the amenity deck of this development.</p>
@@ -148,7 +148,7 @@
                                                 </div>
                                                 <div data-accordion-component="AccordionItemPanel" class="accordion__panel" role="region" aria-labelledby="accordion__heading-a" id="accordion__panel-a">
                                                     <p>SMDC Shore 2 Pasay is situated along Sunrise Drive, Mall of Asia Complex, Pasay City. It is strategically located near Manila Bay, providing residents with stunning views of the bay and its famous sunset.</p>
-                                                     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1-dzVt_2Hd2QBxpXlqiEqe8gsUoY-nII&ehbc=2E312F" width="840" height="480"></iframe>
+                                                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1-dzVt_2Hd2QBxpXlqiEqe8gsUoY-nII&ehbc=2E312F" style="width: 90%; height: 20rem;"></iframe>
                                                 </div>
                                             </div>
                                             <div data-accordion-component="AccordionItem" class="accordion__item">
@@ -342,11 +342,74 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="terms" id="termsCheckbox" required>
                     <label class="form-check-label" for="termsCheckbox">
-                        I accept the terms and conditions
+                        I accept the <a href="#" data-bs-toggle="modal" data-bs-target="#termsModal"><u>terms and conditions.</u></a>
                     </label>
                     <div class="invalid-feedback" style="display:block"></div>
                 </div>
             </div>
+            <div class="modal fade" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="termsModalLabel">Terms and Conditions</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Partnership Agreement: Real Estate Listing<br>
+
+                        This Partnership Agreement ("Agreement") is entered into as of the Effective Date by and between [Your Company Name], hereinafter referred to as "Company A," and the party referred to as "Company B," collectively referred to as the "Parties." <br><br>
+
+                        1. Purpose: <br>
+                        The purpose of this Agreement is to establish a partnership between Company A and Company B for the listing of real estate properties on Company B's website. The partnership aims to enhance both parties' market presence and provide valuable services to their respective clients.<br><br>
+
+                        2. Scope of Partnership: <br>
+                        Company A grants Company B the non-exclusive right to display and list its real estate properties on Company B's website. Company B will provide a dedicated section on its website to showcase Company A's listings, along with relevant property details, descriptions, and images. <br><br>
+
+                        3. Listing Process:<br>
+                        a. Company A shall be responsible for providing accurate and up-to-date information about the real estate properties to be listed on Company B's website.<br>
+
+                        b. Company B shall review and approve each property listing before it goes live on their website. However, Company B shall not be held responsible for the accuracy or completeness of the information provided by Company A.<br>
+
+                        c. Both parties will work collaboratively to ensure that the property listings comply with all relevant laws, regulations, and industry standards.<br><br>
+
+                        4. Duration of Partnership:<br>
+                        This partnership shall commence on the Effective Date and will remain in effect for a period of 2 years. Either party may terminate this Agreement with 21 days written notice to the other party.<br><br>
+
+                        5. Responsibilities of Company A:<br>
+                        a. Company A shall provide Company B with high-quality images and detailed descriptions of each real estate property to be listed.<br>
+
+                        b. Company A will promptly inform Company B of any changes or updates to the property listings.<br>
+
+                        c. Company A will adhere to all laws, regulations, and ethical guidelines related to real estate transactions.<br><br>
+
+                        6. Responsibilities of Company B:<br>
+                        a. Company B shall display the property listings provided by Company A on its website in a professional manner.<br>
+
+                        b. Company B will ensure that its website is accessible and functioning properly to showcase the real estate listings.<br>
+
+                        c. Company B will provide reasonable technical support to address any issues related to the listing display.<br><br>
+
+                        7. Intellectual Property:<br>
+                        Each party shall retain ownership of its respective intellectual property, including but not limited to trademarks, logos, and copyrighted materials. Company A grants Company B the limited right to use its logos and property images solely for the purpose of listing on Company B's website.<br><br>
+
+                        8. Confidentiality:<br>
+                        Both parties agree to keep all non-public information shared during the course of this partnership confidential. This includes, but is not limited to, financial data, marketing strategies, and any other proprietary information.<br><br>
+
+                        9. Indemnification:<br>
+                        Both parties agree to indemnify and hold each other harmless from any claims, damages, or liabilities arising out of the other party's breach of this Agreement or any misrepresentation.<br><br>
+
+                        10. Governing Law and Dispute Resolution:<br>
+                        This Agreement shall be governed by the laws of [State/Country]. Any dispute arising out of or relating to this Agreement shall be resolved through good-faith negotiations between the Parties. If a resolution cannot be reached, both Parties agree to submit the matter to arbitration in accordance with the rules of the Philippine Government, and the decision of the arbitrator shall be final and binding.<br><br>
+
+                        IN WITNESS WHEREOF, the Parties hereto have executed this Partnership Agreement as of the Effective Date.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+    </div>
             <div class="col-lg-12 col-sm-12 text-center">
                 <button type="submit" class="btn btn-primary">Get in Touch</button>
             </div>
