style: added why choose us section in outsourcing page

--- a/Views/Home/Outsourcing.cshtml
+++ b/Views/Home/Outsourcing.cshtml
@@ -47,6 +47,7 @@
     </div>
 </div>
 
+@* Outsourcing Services Section *@
 <div class="services-area-two pt-80 pb-50 bg-f9f6f6">
     <div class="container">
         @* Section Title: Outsourcing Services *@
@@ -138,6 +139,61 @@
                     </div>
                     <h3><a href="/service-details/">Finance and Accounting</a></h3>
                     <p>Finance and accounting outsourcing encompass financial management tasks like bookkeeping, tax preparation, financial analysis, and auditing. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@* Why Choose Us Section *@
+<div class="why-choose-us ptb-80 pt-0">
+    <div class="container">
+        <div class="row align-items-center">
+            @* Why Choose FCD *@
+            <div class="col-lg-6 col-md-12">
+                <div class="section-title">
+                    <h2>Why Choose Us</h2>
+                    <div class="bar"></div>
+                    <p>Offers numerous benefits and advantages that set us apart from the competition.</p>
+                </div>
+                <div class="why-choose-us-image">
+                    <img src="~/Assets/img/banner-image/main-static.png" class="animate__animated animate__fadeInLeft" alt="image">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row">
+                    @* Expert Team *@
+                    <div class="col-lg-6 col-md-6">
+                        <div class="single-why-choose-us">
+                            <div class="icon"><i class="flaticon-team"></i></div>
+                            <h3>Expert Team</h3>
+                            <p>Our team of experienced professionals is well-versed in handling various outsourcing tasks, ensuring high-quality deliverables and efficient processes.</p>
+                        </div>
+                    </div>
+                    @* Global Reach *@
+                    <div class="col-lg-6 col-md-6">
+                        <div class="single-why-choose-us">
+                            <div class="icon"><i class="flaticon-rocket"></i></div>
+                            <h3>Global Reach</h3>
+                            <p>With a global presence, we can seamlessly serve clients from different regions, providing them with reliable and scalable outsourcing solutions.</p>
+                        </div>
+                    </div>
+                    @* Security *@
+                    <div class="col-lg-6 col-md-6">
+                        <div class="single-why-choose-us">
+                            <div class="icon"><i class="flaticon-shield"></i></div>
+                            <h3>100% Safe &amp; Security</h3>
+                            <p>At our company, we prioritize safeguarding your sensitive information and providing a secure environment for your interactions and transactions.</p>
+                        </div>
+                    </div>
+                    @* Cost-Effective Solutions *@
+                    <div class="col-lg-6 col-md-6">
+                        <div class="single-why-choose-us">
+                            <div class="icon"><i class="flaticon-diamond"></i></div>
+                            <h3>Cost-Effective Solutions</h3>
+                            <p>By outsourcing to us, you can reduce operational costs and increase cost-efficiency, allowing you to allocate resources strategically.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
