style: added contact us section in outsourcing page

--- a/Views/Home/Outsourcing.cshtml
+++ b/Views/Home/Outsourcing.cshtml
@@ -199,3 +199,13 @@
         </div>
     </div>
 </div>
+
+@* Contact Us Section *@
+<div class="ready-to-talk" style="padding-bottom: 110px">
+    <div class="container">
+        <h3>Ready to talk?</h3>
+        <p>Our team is here to answer your question about StartP</p>
+        <a class="btn btn-primary" href="/contact/">Contact Us</a>
+        <span><a href="/about-1/#">Or, get started now with a free trial</a></span>
+    </div>
+</div>
