--- a/Views/Home/SoftDesignAndDev.cshtml
+++ b/Views/Home/SoftDesignAndDev.cshtml
@@ -8,39 +8,80 @@
         <div class="d-table-cell">
             <div class="container">
                 <h1 class="font-weight-bold">Software Design and Development</h1>
+                <p class="lead">Transforming Ideas into Intuitive Solutions</p>
+                <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
             </div>
         </div>
     </div>
+    @* Page summary *@
+    <div class="pageSummary mt-5 mb-5">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 mt-5 pr-5 services-details-image">
+                        <div class="about-image">
+                            <img src="~/assets/img/about4.png" alt="image">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 pl-5">
+                        <div class="about-content">
+                            <div class="section-title">
+                                <h2>Transforming Ideas into Intuitive Solutions</h2>
+                                <div class="bar"></div>
+                                <p class="text-justify">Innovation and efficiency are at the core of our software design and development services. We take your ideas and turn them into intuitive, user-friendly solutions. Our website development services create stunning web experiences that reflect your brand identity and drive conversions. For those looking to capitalize on the booming e-commerce market, our tailor-made solutions provide secure and scalable platforms for online success. Moreover, our Point of Sale (POS) systems simplify retail operations, optimizing your business for growth.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @* Page Content *@
+    <div class="ml-partner-area mt-5 pt-5">
+        <div class="container ">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-sm-6 col-md-6">
+                    <div class="agency-services-box">
+                        <img src="~/assets/img/agency-image/agency-services-img1.jpg" alt="image" />
+                        <a href="@Url.Action("SoftDesignAndDev", "Home")#webSec" class="content">
+                            <h5>Website</h5>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-md-6">
+                    <div class="agency-services-box">
+                        <img src="~/assets/img/agency-image/agency-services-img2.jpg" alt="image" />
+                        <a href="@Url.Action("SoftDesignAndDev", "Home")#ecomSec" class="content">
+                            <h5>Ecommerce</h5>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-md-6">
+                    <div class="agency-services-box">
+                        <img src="~/assets/img/agency-image/agency-services-img3.jpg" alt="image" />
+                        <a href="@Url.Action("SoftDesignAndDev", "Home")#POSsec" class="content">
+                            <h5>Point of Sales</h5>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="shape1"><img src="~/assets/img/shape1.png" alt="shape"></div>
+        <div class="shape2 rotateme"><img src="~/assets/img/shape2.svg" alt="shape"></div>
+        <div class="shape3"><img src="~/assets/img/shape3.svg" alt="shape"></div>
+        <div class="shape4"><img src="~/assets/img/shape4.svg" alt="shape"></div>
+        <div class="shape5"><img src="~/assets/img/shape5.png" alt="shape"></div>
+        <div class="shape6 rotateme"><img src="~/assets/img/shape4.svg" alt="shape"></div>
+        <div class="shape7"><img src="~/assets/img/shape4.svg" alt="shape"></div>
+        <div class="shape8 rotateme"><img src="~/assets/img/shape2.svg" alt="shape"></div>
+    </div>
+
 </div>
 <!-- End Page Title -->
 
-<!-- Start Page summary  Section -->
-<div class="pageSummary mb-5">
-    <div class="container">
-        <div class="d-flex justify-content-center">
-            <div class="row mb-5">
-                <div class="col-lg-6 col-md-12 mt-5 pr-5">
-                    <div class="about-image">
-                        <img src="~/assets/img/about4.png" alt="image">
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 pl-5">
-                    <div class="about-content">
-                        <div class="section-title">
-                            <h2>Lorem Ipsum</h2>
-                            <div class="bar"></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- End of Page Summary Section-->
+
+
 
 
 <!-- Start of Website Section-->
@@ -51,7 +92,7 @@
             <div class="ml-main-banner ">
                 <div class="section-title" style="margin-top: 100px">
                     <h1 class="font-weight-bold">Web Design and Development Services</h1>
-                    <a class="btn btn-secondary mt-5" href="/contact/">Get Started</a>
+                    <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
                 </div>
             </div>
             @* Technology Stack Logo Section *@
@@ -325,7 +366,7 @@
         <div class="ml-main-banner">
             <div class="section-title" style="margin-top: 100px">
                 <h1 class="font-weight-bold">Ecommerce System <br /> Design and Development Services</h1>
-                <a class="btn btn-secondary mt-5" href="/contact/">Get Started</a>
+                <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
             </div>
         </div>
 
@@ -490,30 +531,28 @@
 
 
 <!-- Start of POS Section -->
-<div class="posSection">
-    <div class="ml-main-section" id="POSsec" style="background-image: url(/Assets/img/banner-bg.jpg)">
+<div class="POS-section">
+    <div class="ml-main-section"  style="background-image: url(/Assets/img/banner-bg.jpg)">
         <div class="container-fluid">
             @* POS Banner *@
-            <div class="ml-main-banner">
+            <div class="ml-main-banner" id="POSsec">
                 <div class="container-fluid">
                     <div class="section-title" style="margin-top: 100px">
                         <h1 class="font-weight-bold">Point of Sales <br /> Design and Development Services</h1>
+                        <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
                     </div>
                 </div>
             </div>
             <div class="container">
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12">
-                        <div class="ml-banner-content">
+                        <div class="ml-banner-content mr-5">
                             <h1>Efficient Point of Sale Solutions for Your Business</h1>
                             <p>We offer cutting-edge point-of-sale solutions tailored to meet the unique needs of your business. Our feature-rich POS system provides you with the tools you need to streamline your operations, increase sales, and enhance customer experiences.</p>
-                            <a class="btn btn-secondary" href="/contact/">Get Started</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class="ml-banner-image" style="top: 0;">
-                            <img src="~/Assets/img/ml-main-pic.png" alt="image">
-                        </div>
+                    <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center">
+                        <img src="~/Assets/img/ml-main-pic.png" alt="image">
                     </div>
                 </div>
             </div>
@@ -525,13 +564,12 @@
             <div class="shape6 rotateme"><img src="~/assets/img/shape4.svg" alt="shape"></div>
             <div class="shape7"><img src="~/assets/img/shape4.svg" alt="shape"></div>
             <div class="shape8 rotateme"><img src="~/assets/img/shape2.svg" alt="shape"></div>
-
         </div>
     </div>
 
     <div class="container-fluid">
         @* About Our POS System *@
-        <div class="services-area ptb-80 ">
+        <div class="services-area pb-80 ">
             <div class="container">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-lg-6 col-md-12 services-content">
@@ -607,7 +645,7 @@
         </div>
 
         @* Free Trial Section *@
-        <div class="row align-items-center">
+        <div class="row align-items-center ptb-80">
             <div class="col-lg-6 col-md-12">
                 <div class="free-trial-image">
                     <img src="~/Assets/img/free-trial-img.png" alt="image">
@@ -625,46 +663,7 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 <!-- End of POS Section -->
 
-<!-- Queries -->
-<div class="funfacts-area ptb-80 mt-15 mt-md-15 mb-5">
-    <div class="container">
-        <div class="section-title">
-            <h2>We always try to understand users expectation</h2>
-            <div class="bar"></div>
-            <p>By prioritizing user expectations, Future Craft Digital can create products, services, or experiences that align with user needs, resulting in enhanced satisfaction, engagement, and usability.</p>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-12">
-                <div class="funfact">
-                    <h3>20K</h3>
-                    <p>Feedback</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-                <div class="funfact">
-                    <h3>500+</h3>
-                    <p>Workers</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-                <div class="funfact">
-                    <h3>70+</h3>
-                    <p>Contributors</p>
-                </div>
-            </div>
-        </div>
-        <div class="contact-cta-box">
-            <h3>Have any question about us?</h3>
-            <p>Don't hesitate to contact us</p>
-            <a class="btn btn-primary" href="/contact/">Contact Us</a>
-        </div>
-        <div class="map-bg">
-            <img src="~/Assets/img/map.png" alt="map">
-        </div>
-    </div>
-</div>
