Service Minor Updates
- Minor Updates on Content

--- a/Views/Home/Marketing.cshtml
+++ b/Views/Home/Marketing.cshtml
@@ -98,7 +98,6 @@
         <div class="shape7"><img src="~/assets/img/shape4.svg" alt="shape"></div>
         <div class="shape8 rotateme"><img src="~/assets/img/shape2.svg" alt="shape"></div>
     </div>
-
 </div>
 <!-- End Page Title -->
 
@@ -113,7 +112,8 @@
             <div class="container-fluid">
                 <div class="section-title" style="margin-top: 100px">
                     <h1 class="font-weight-bold">Search Engine Optimization</h1>
-                    <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                    <p class="lead">Elevate Your Online Visibility</p>
+                    <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
                 </div>
             </div>
             <div class="shape1"><img src="~/assets/img/shape1.png" alt="shape"></div>
@@ -195,7 +195,6 @@
 <!-- End of SEO Section-->
 
 
-
 <!-- Start of Content Creation Section -->
 <div id="smmSec">
     <div class="ml-main-section mt-minus-top">
@@ -204,7 +203,8 @@
             <div class="container-fluid">
                 <div class="section-title" style="margin-top: 100px">
                     <h1 class="font-weight-bold">Content Creation</h1>
-                    <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                    <p class="lead">Captivating Stories, Compelling Results</p>
+                    <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
                 </div>
             </div>
 
@@ -301,7 +301,8 @@
             <div class="container-fluid">
                 <div class="section-title" style="margin-top: 100px">
                     <h1 class="font-weight-bold">Digital Marketing</h1>
-                    <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                    <p class="lead">Ignite Your Brand's Online Presence</p>
+                    <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
                 </div>
             </div>
             <div class="shape1"><img src="~/assets/img/shape1.png" alt="shape"></div>
@@ -391,6 +392,7 @@
             <div class="container-fluid">
                 <div class="section-title" style="margin-top: 100px">
                     <h1 class="font-weight-bold">Social Media Management</h1>
+                    <p class="lead">Building Connections, Inspiring Engagement</p>
                     <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
                 </div>
             </div>
