--- a/Views/Home/SoftDesignAndDev.cshtml
+++ b/Views/Home/SoftDesignAndDev.cshtml
@@ -9,7 +9,7 @@
             <div class="container">
                 <h1 class="font-weight-bold">Software Design and Development</h1>
                 <p class="lead">Transforming Ideas into Intuitive Solutions</p>
-                <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                <a class="btn btn-secondary" href="@Url.Action("AvailService", "Home")">Get Started</a>
             </div>
         </div>
     </div>
@@ -92,7 +92,8 @@
             <div class="ml-main-banner ">
                 <div class="section-title" style="margin-top: 100px">
                     <h1 class="font-weight-bold">Web Design and Development Services</h1>
-                    <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                    <p class="lead">Your Gateway to Digital Excellence</p>
+                    <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
                 </div>
             </div>
             @* Technology Stack Logo Section *@
@@ -366,7 +367,8 @@
         <div class="ml-main-banner">
             <div class="section-title" style="margin-top: 100px">
                 <h1 class="font-weight-bold">Ecommerce System <br /> Design and Development Services</h1>
-                <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                <p class="lead">Empowering Your Online Storefront</p>
+                <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
             </div>
         </div>
 
@@ -539,7 +541,8 @@
                 <div class="container-fluid">
                     <div class="section-title" style="margin-top: 100px">
                         <h1 class="font-weight-bold">Point of Sales <br /> Design and Development Services</h1>
-                        <a class="btn btn-secondary mt-5" href="@Url.Action("AvailService", "Home")">Get Started</a>
+                        <p class="lead">Seamless Point of Sale Solutions</p>
+                        <a class="btn btn-secondary mt-3" href="@Url.Action("AvailService", "Home")">Get Started</a>
                     </div>
                 </div>
             </div>
